examples/c/error-codes/violates-constraint/fatal/CV-TEAS1-bad-static.output
CV-TEAS1-bad-static.c:10:10: error: assigning to 'struct s' from incompatible type 'int'
      s0 = 1;
         ^ ~
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
